# thesis-ppgmap-software

./: .gitignore  README.md
fhe/: bump100.tex  bump1000.tex  closest.hpp  fhe  fhe-ee  fhe-ie  frheateq.hpp  linspace.hpp  main-cn.cpp  main-ee.cpp  main-ie.cpp  main.cpp  main.cpp.bak01  main.cpp.bak02  plotconfig.sty
fhe/toeplitz/: a.out  fast_symm_product.c  fsp-test  fsp-test.cpp  fsp-v2.hpp  fsp.hpp  main.cpp  solvers-test.cpp  toeplitz
fhe/toeplitz/solvers/: levinson.hpp
frlap/: Makefile
frlap/examples/: Makefile  array.h  bench  bench-out.txt  bench.c  fltcmp.h  linspace.h
frlap/include/: frlap.h
frlap/include/frlap/: frlap1dq.h
frlap/include/frlap/frlap1dq/: wgtor.h
frlap/src/: frlap.c
frlap/src/frlap1dq/: wgtor_centered_periodic_3_point.c  wgtor_centered_periodic_5_point.c  wgtor_gorenflo_mainardi.c  wgtor_huang_oberman.c  wgtor_huang_oberman_linear.c  wgtor_huang_oberman_quadratic.c  wgtor_spectral.c
frlap/src/frlap1dq/ooura/intde/: intde1.c  intde1t  main  main.c
frlap/src/toeplitz/: toeplitz.h  toeplitz_prod_2.c
frlap/src/toeplitz/tests/: durbin.c  durbin.h  levinson.c  levinson.h  test-durbin  test-durbin.c  test-levinson  test-levinson.c
libfrlap/: .gitignore  AUTHORS  Makefile.am  config.h  configure.ac  libtool
libfrlap/.libs/: libfrlap.lai
libfrlap/examples/: Makefile.am
libfrlap/examples/bench701/: Makefile.am  array.h  bench701  bench701.c  bencht.c
libfrlap/include/frlap/: frlap.h  frlap1gd.h
libfrlap/include/frlap/frlap1gd/: dcgtors.h  dcgtors_validate_args.h
libfrlap/src/: almosteq.c  almosteq.h  frlap.c  frlap1gd.c
libfrlap/src/frlap1gd/: dcgtor_centered_3_point_periodized.c  dcgtor_centered_5_point_periodized.c  dcgtor_gorenflo_mainardi.c  dcgtor_huang_oberman.c  dcgtor_huang_oberman_linear.c  dcgtor_huang_oberman_quadratic.c  dcgtor_spectral.c  dcgtors_validate_args.c
